@@ -6,12 +6,17 @@ Help: elldivpol(E,n,{v='x}): n-division polynomial f_n for the curve E in the
  variable v.
 Doc: $n$-division polynomial $f_n$ for the curve $E$ in the
  variable $v$. In standard notation, for any affine point $P = (X,Y)$ on the
- curve, we have
+ curve and any integer $n \geq 0$, we have
  $$[n]P = (\phi_n(P)\psi_n(P) : \omega_n(P) : \psi_n(P)^3)$$
  for some polynomials $\phi_n,\omega_n,\psi_n$ in
  $\Z[a_1,a_2,a_3,a_4,a_6][X,Y]$. We have $f_n(X) = \psi_n(X)$ for $n$ odd, and
  $f_n(X) = \psi_n(X,Y) (2Y + a_1X+a_3)$ for $n$ even. We have
- $$ f_1  = 1,\quad f_2 = 4X^3 + b_2X^2 + 2b_4 X + b_6, \quad f_3 = 3 X^4 + b_2 X^3 + 3b_4 X^2 + 3 b_6 X + b8, $$
+ $$ f_0 = 0,\quad f_1  = 1,\quad f_2 = 4X^3 + b_2X^2 + 2b_4 X + b_6,
+  \quad f_3 = 3 X^4 + b_2 X^3 + 3b_4 X^2 + 3 b_6 X + b8, $$
  $$ f_4 = f_2(2X^6 + b_2 X^5 + 5b_4 X^4 + 10 b_6 X^3 + 10 b_8 X^2 +
  (b_2b_8-b_4b_6)X + (b_8b_4 - b_6^2)), \dots $$
- For $n \geq 2$, the roots of $f_n$ are the $X$-coordinates of points in $E[n]$.
+ When $n$ is odd, the roots of $f_n$ are the $X$-coordinates of the affine
+ points in the $n$-torsion subgroup $E[n]$; when $n$ is even, the roots
+ of $f_n$ are the $X$-coordinates of the affine points in $E[n]\setminus
+ E[2]$ when $n > 2$, resp.~in $E[2] when $n = 2$.
+ For $n < 0$, we define $f_n := - f_{-n}$.
