@@ -271,6 +271,9 @@ a
 [5, -70, -300, 1956, -28305]
 8*x^9 + 54*x^8 + 393*x^7 + 2373*x^6 + 6993*x^5 + 15267*x^4 + 19998*x^3 + 473
 4*x^2 - 25880*x - 30932
+-1
+-4*x^3 - 9*x^2 - 26*x - 37
+-3*x^4 - 9*x^3 - 39*x^2 - 111*x - 41
 [0, 0]
 [x, 1]
 [x^4 - 13*x^2 - 74*x - 41, 4*x^3 + 9*x^2 + 26*x + 37]
@@ -760,4 +763,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   ***   at top-level: ellK(1)
   ***                 ^-------
   *** ellK: domain error in ellK: k^2 = 1
-Total time spent: 1330
+Total time spent: 1020
