@@ -126,6 +126,7 @@ BA  31- revert 2-12-0 C18: qfbsolve with default flag = previous behaviour
         to be a t_INTMOD)
     37- support compact representation in nfeltmul, nfeltpow, nfeltdiv,
         nfmodpr, nfeltsign
+    38- elldivpol for negative n: define f_{-n} = -f_n [ was f_n ]
 
   Added
      1- new GP function rootsof1
